working front finally

--- a/src/web/templates/dashboard.html
+++ b/src/web/templates/dashboard.html
@@ -416,15 +416,9 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/proposals">
+                            <a class="nav-link" href="/api/proposals">
                                 <i class="fas fa-vote-yea me-2"></i>
-                                Proposals
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/analytics">
-                                <i class="fas fa-chart-line me-2"></i>
-                                Analytics
+                                Proposals (API)
                             </a>
                         </li>
                         <li class="nav-item">
